--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,8 +14,14 @@
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "go version",
 
-	// Configure tool-specific properties.
-	// "customizations": {},
+	//Configure tool-specific properties.
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"a-h.templ"
+			]
+		}
+	},
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
