--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,12 @@
 	"image": "mcr.microsoft.com/devcontainers/go:1-1.21-bullseye",
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
-	"features": {"ghcr.io/devcontainers/features/go:1": {}},
+	"features": {"ghcr.io/devcontainers/features/go:1": {},
+	"ghcr.io/devcontainers/features/python:1": {
+		"version": "3.9",
+		"optimize": true
+	},
+},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
